[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "biorag"
version = "1.0.0"
description = "Biomedical RAG with Entity Linking and Jargon Simplification"
authors = ["Your Name <your.email@domain.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/biorag"
repository = "https://github.com/yourusername/biorag"
documentation = "https://github.com/yourusername/biorag#readme"
keywords = ["biomedical", "rag", "nlp", "entity-linking", "scientific-literature"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

packages = [
    { include = "biorag" },
    { include = "core" },
]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.28.0"
langchain = "0.1.17"
langchain-community = "0.0.38"
langchain-openai = "0.1.7"
chromadb = "0.4.24"
sentence-transformers = "^2.2.2"
spacy = "^3.6.0"
scispacy = "^0.5.3"
transformers = "^4.30.0"
torch = "^2.0.0"
numpy = "^1.24.0"
pandas = "^2.0.0"
pyyaml = "^6.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
feedparser = "^6.0.10"
pypdf2 = "^3.0.0"
pdfplumber = "^0.9.0"
pytesseract = "^0.3.10"
pillow = "^10.0.0"
pymupdf = "^1.23.0"
unstructured = "^0.10.0"
rich = "^13.5.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[tool.poetry.scripts]
biorag-ui = "main:main"
biorag-cli = "cli:main"
biorag = "cli:main"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=biorag --cov-report=html --cov-report=term-missing"